--- a/Financial_Data_Insights.ipynb
+++ b/Financial_Data_Insights.ipynb
@@ -503,30 +503,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\KamoheloSebolai\\AppData\\Local\\Temp\\ipykernel_17948\\3578202349.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  FinanceData['customer_group_code'].fillna(0, inplace=True)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0            0.0\n",
+       "1            0.0\n",
+       "2            0.0\n",
+       "3            0.0\n",
+       "4            0.0\n",
+       "           ...  \n",
+       "220005    2403.0\n",
+       "220006    2403.0\n",
+       "220007    2403.0\n",
+       "220008    2403.0\n",
+       "220009    2403.0\n",
+       "Name: customer_group_code, Length: 220010, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "FinanceData['customer_group_code'].fillna(0, inplace=True)"
+    "FinanceData['customer_group_code'].fillna(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +883,7 @@
        "[220010 rows x 19 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
