added total amount analysis

--- a/Financial_Data_Insights.ipynb
+++ b/Financial_Data_Insights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4                 1  1500         ACT  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "max            6.000000    2600.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "Name: customer_group_code, Length: 220010, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "      <th>0</th>\n",
        "      <td>BUF</td>\n",
        "      <td>2024M01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -606,7 +606,7 @@
        "      <th>1</th>\n",
        "      <td>BUF</td>\n",
        "      <td>2024M01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>15168131</td>\n",
        "      <td>1535315627</td>\n",
@@ -628,7 +628,7 @@
        "      <th>2</th>\n",
        "      <td>BUF</td>\n",
        "      <td>2024M01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>42480113</td>\n",
        "      <td>391769777</td>\n",
@@ -650,7 +650,7 @@
        "      <th>3</th>\n",
        "      <td>BUF</td>\n",
        "      <td>2024M01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>35889383</td>\n",
        "      <td>749661261</td>\n",
@@ -672,7 +672,7 @@
        "      <th>4</th>\n",
        "      <td>BUF</td>\n",
        "      <td>2024M01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>8016947</td>\n",
        "      <td>363135730</td>\n",
@@ -829,11 +829,11 @@
       ],
       "text/plain": [
        "       demarcation_code period_code  customer_group_code  bad_amount  \\\n",
-       "0                   BUF     2024M01                  0.0           0   \n",
-       "1                   BUF     2024M01                  0.0           0   \n",
-       "2                   BUF     2024M01                  0.0           0   \n",
-       "3                   BUF     2024M01                  0.0           0   \n",
-       "4                   BUF     2024M01                  0.0           0   \n",
+       "0                   BUF     2024M01                  NaN           0   \n",
+       "1                   BUF     2024M01                  NaN           0   \n",
+       "2                   BUF     2024M01                  NaN           0   \n",
+       "3                   BUF     2024M01                  NaN           0   \n",
+       "4                   BUF     2024M01                  NaN           0   \n",
        "...                 ...         ...                  ...         ...   \n",
        "220005            WC053     2024M06               2403.0           0   \n",
        "220006            WC053     2024M06               2403.0           0   \n",
@@ -883,7 +883,7 @@
        "[220010 rows x 19 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,6 +891,87 @@
    "source": [
     "FinanceData"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total Amount Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "period_code\n",
+       "2024M01    1697972296808\n",
+       "2024M02    1729924934642\n",
+       "2024M03    1782715087732\n",
+       "2024M04    1827732286716\n",
+       "2024M05    1928220975088\n",
+       "2024M06    1970909017638\n",
+       "Name: total_amount, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_amount_period = FinanceData.groupby('period_code')['total_amount'].sum()\n",
+    "total_amount_period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "item\n",
+       "1100                0\n",
+       "1200    1049189950092\n",
+       "1300     427205435948\n",
+       "1400     708658903161\n",
+       "1500     345349040475\n",
+       "1600     288301070939\n",
+       "1700      39337236665\n",
+       "1810     431616147034\n",
+       "1820       4703998164\n",
+       "1900     291860780833\n",
+       "2000    3586222563311\n",
+       "2100                0\n",
+       "2200     122101229761\n",
+       "2300     374594099025\n",
+       "2400    1353626410565\n",
+       "2500      32192996650\n",
+       "2600    1882514736001\n",
+       "Name: total_amount, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_amount_item= FinanceData.groupby('item')['total_amount'].sum()\n",
+    "total_amount_item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
