--- a/Financial_Data_Insights.ipynb
+++ b/Financial_Data_Insights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,35 +222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "demarcation_code           0\n",
-       "period_code                0\n",
-       "customer_group_code    24650\n",
-       "bad_amount                 0\n",
-       "badi_amount                0\n",
-       "g1_amount                  0\n",
-       "l1_amount                  0\n",
-       "l120_amount                0\n",
-       "l150_amount                0\n",
-       "l180_amount                0\n",
-       "l30_amount                 0\n",
-       "l60_amount                 0\n",
-       "l90_amount                 0\n",
-       "total_amount               0\n",
-       "financial_year             0\n",
-       "period_length              0\n",
-       "financial_period           0\n",
-       "item                       0\n",
-       "amount_type                0\n",
+       "demarcation_code       0\n",
+       "period_code            0\n",
+       "customer_group_code    0\n",
+       "bad_amount             0\n",
+       "badi_amount            0\n",
+       "g1_amount              0\n",
+       "l1_amount              0\n",
+       "l120_amount            0\n",
+       "l150_amount            0\n",
+       "l180_amount            0\n",
+       "l30_amount             0\n",
+       "l60_amount             0\n",
+       "l90_amount             0\n",
+       "total_amount           0\n",
+       "financial_year         0\n",
+       "period_length          0\n",
+       "financial_period       0\n",
+       "item                   0\n",
+       "amount_type            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>195360.000000</td>\n",
+       "      <td>220010.000000</td>\n",
        "      <td>2.200100e+05</td>\n",
        "      <td>2.200100e+05</td>\n",
        "      <td>2.200100e+05</td>\n",
@@ -323,7 +323,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>2283.228998</td>\n",
+       "      <td>2027.415195</td>\n",
        "      <td>1.462248e+05</td>\n",
        "      <td>3.310494e+06</td>\n",
        "      <td>3.265129e+07</td>\n",
@@ -341,7 +341,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>61.524334</td>\n",
+       "      <td>722.498644</td>\n",
        "      <td>3.156439e+07</td>\n",
        "      <td>1.446371e+08</td>\n",
        "      <td>4.802565e+08</td>\n",
@@ -359,7 +359,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2201.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>-4.294507e+09</td>\n",
        "      <td>-4.790468e+08</td>\n",
        "      <td>-8.463649e+08</td>\n",
@@ -377,7 +377,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>2236.000000</td>\n",
+       "      <td>2227.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
@@ -395,7 +395,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>2270.000000</td>\n",
+       "      <td>2256.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
@@ -413,7 +413,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2304.000000</td>\n",
+       "      <td>2303.000000</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.634735e+05</td>\n",
@@ -453,13 +453,13 @@
       ],
       "text/plain": [
        "       customer_group_code    bad_amount   badi_amount     g1_amount  \\\n",
-       "count        195360.000000  2.200100e+05  2.200100e+05  2.200100e+05   \n",
-       "mean           2283.228998  1.462248e+05  3.310494e+06  3.265129e+07   \n",
-       "std              61.524334  3.156439e+07  1.446371e+08  4.802565e+08   \n",
-       "min            2201.000000 -4.294507e+09 -4.790468e+08 -8.463649e+08   \n",
-       "25%            2236.000000  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "50%            2270.000000  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "75%            2304.000000  0.000000e+00  0.000000e+00  1.634735e+05   \n",
+       "count        220010.000000  2.200100e+05  2.200100e+05  2.200100e+05   \n",
+       "mean           2027.415195  1.462248e+05  3.310494e+06  3.265129e+07   \n",
+       "std             722.498644  3.156439e+07  1.446371e+08  4.802565e+08   \n",
+       "min               0.000000 -4.294507e+09 -4.790468e+08 -8.463649e+08   \n",
+       "25%            2227.000000  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "50%            2256.000000  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "75%            2303.000000  0.000000e+00  0.000000e+00  1.634735e+05   \n",
        "max            2404.000000  6.206189e+09  1.162668e+10  4.106160e+10   \n",
        "\n",
        "          l1_amount   l120_amount   l150_amount   l180_amount    l30_amount  \\\n",
@@ -493,7 +493,7 @@
        "max            6.000000    2600.000000  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,30 +504,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\KamoheloSebolai\\AppData\\Local\\Temp\\ipykernel_17948\\1227313632.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  FinanceData['customer_group_code'].fillna(0, inplace=True)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0            0.0\n",
+       "1            0.0\n",
+       "2            0.0\n",
+       "3            0.0\n",
+       "4            0.0\n",
+       "           ...  \n",
+       "220005    2403.0\n",
+       "220006    2403.0\n",
+       "220007    2403.0\n",
+       "220008    2403.0\n",
+       "220009    2403.0\n",
+       "Name: customer_group_code, Length: 220010, dtype: float64"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "FinanceData['customer_group_code'].fillna(0, inplace=True)\n"
+    "FinanceData['customer_group_code'].fillna(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +884,7 @@
        "[220010 rows x 19 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
