--- a/Financial_Data_Insights.ipynb
+++ b/Financial_Data_Insights.ipynb
@@ -931,7 +931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Financial Performance by Item\n"
+    "Financial Performance by Item\n"
    ]
   },
   {
@@ -1052,6 +1052,46 @@
     "plt.xlabel='Period Code'\n",
     "plt.ylabel='Total Amount'\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bad Debt and Aging Ratio Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       period_code  bad_amount_ratio  aging_ratio\n",
+      "0          2024M01               NaN          NaN\n",
+      "1          2024M01               0.0     0.108707\n",
+      "2          2024M01               0.0     0.312515\n",
+      "3          2024M01               0.0     0.279716\n",
+      "4          2024M01               0.0     0.202990\n",
+      "...            ...               ...          ...\n",
+      "220005     2024M06               NaN          NaN\n",
+      "220006     2024M06               NaN          NaN\n",
+      "220007     2024M06               NaN          NaN\n",
+      "220008     2024M06               NaN          NaN\n",
+      "220009     2024M06               0.0     0.490617\n",
+      "\n",
+      "[220010 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinanceData['bad_amount_ratio'] = FinanceData['bad_amount']/FinanceData['total_amount']\n",
+    "FinanceData['aging_sum'] = FinanceData[['l30_amount', 'l60_amount', 'l90_amount', 'l120_amount']].sum(axis=1)\n",
+    "FinanceData['aging_ratio'] = FinanceData['aging_sum'] / FinanceData['total_amount']\n",
+    "print(FinanceData[['period_code', 'bad_amount_ratio', 'aging_ratio']])\n"
    ]
   }
  ],
